[package]
name = "sorted_set_nif"
version = "1.2.1"
authors = []
edition = "2018"

[lib]
name = "sorted_set_nif"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
jemalloc-info = { git = "https://github.com/pertsevds/jemalloc_info.git" }
jemallocator = { version = "0.5.0", features = ["disable_initial_exec_tls", "stats"] }
rustler = "0.29.1"
